--- a/quotes/quoteapp/templates/quoteapp/base.html
+++ b/quotes/quoteapp/templates/quoteapp/base.html
@@ -5,43 +5,82 @@
     <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'quoteapp/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'quoteapp/style.css' %}">
 </head>
 <body>
-<div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'quoteapp:add_author' %}">Add author</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'quoteapp:add_quote' %}">Add quote</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users:register' %}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'users:login' %}">Login</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
+<header class="header p-3 mb-3 border-bottom">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'quoteapp:add_author' %}" class="nav-link px-2 link-body-emphasis">Add author</a></li>
+          <li><a href="{% url 'quoteapp:add_quote' %}" class="nav-link px-2 link-body-emphasis">Add quote</a></li>
+          {% endif %}
+        </ul>
+
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{% url 'quoteapp:search' %}" method="get">
+            <input type="search" class="form-control" name="q" placeholder="Search..." aria-label="Search">
+<!--            <button type="submit" class="btn btn-primary">Search</button>-->
+        </form>
+
+        <div class="dropdown text-end">
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="{{ user.profile.avatar.url }}" alt="avatar of user" width="32" height="32" class="rounded-circle" onerror="this.src='../../media/default_avatar.png'">
+          </a>
+          <ul class="dropdown-menu text-small" style="">
+              {% if user.is_authenticated %}
+              <li><a class="dropdown-item" href="{% url 'users:profile' %}">Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'users:logout' %}">Logout</a></li>
+              {% else %}
+              <li><a class="dropdown-item" href="{% url 'users:register' %}">Register</a></li>
+              <li><a class="dropdown-item" href="{% url 'users:login' %}">Login</a></li>
+              <li><hr class="dropdown-divider"></li>
+              {% endif %}
+          </ul>
         </div>
-    </nav>
-    {% block content %}
-    {% endblock %}
-</div>
+      </div>
+      {% block content %}
+      {% endblock %}
+    </div>
+</header>
+<!--<div class="container">-->
+<!--    <nav class="navbar navbar-expand-lg bg-body-tertiary">-->
+<!--        <div class="container-fluid">-->
+<!--            <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--                <ul class="navbar-nav">-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link active" aria-current="page" href="/">Home</a>-->
+<!--                    </li>-->
+<!--                    {% if user.is_authenticated %}-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'users:profile' %}" role="button">Profile</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'quoteapp:add_author' %}">Add author</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'quoteapp:add_quote' %}">Add quote</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>-->
+<!--                    </li>-->
+<!--                    {% else %}-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'users:register' %}">Register</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'users:login' %}">Login</a>-->
+<!--                    </li>-->
+<!--                    {% endif %}-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </nav>-->
+<!--</div>-->
 </body>
 </html>
