--- a/quotes/quoteapp/templates/quoteapp/index.html
+++ b/quotes/quoteapp/templates/quoteapp/index.html
@@ -1,10 +1,3 @@
-<style>
-    .top-tags {
-        float: right;
-        margin-right: 0;
-    }
-</style>
-
 {% extends "quoteapp/base.html" %}
 
 {% block content %}
@@ -132,3 +125,31 @@
 
 
 {% endblock %}
+
+<style>
+    .top-tags {
+        float: right;
+        margin-right: 0;
+    }
+
+    /* Стилі для заголовку сторінки */
+    .header-box h1 {
+        text-decoration: none;
+    }
+
+    /* Стилі для заголовку "Viewing tag" */
+    h3 a {
+        text-decoration: none;
+    }
+
+    /* Стилі для тегів */
+    .tag {
+        text-decoration: none;
+        color: #007bff;
+    }
+
+    /* Стилі для картки цитати */
+    .card {
+        margin: 10px 0;
+    }
+</style>
