--- a/quotes/quoteapp/templates/quoteapp/add_author.html
+++ b/quotes/quoteapp/templates/quoteapp/add_author.html
@@ -28,6 +28,6 @@
       </label>
       <span>{{ form.errors.bio }}</span>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-success">Submit</button>
 </form>
 {% endblock %}
