--- a/quotes/quoteapp/templates/quoteapp/add_quote.html
+++ b/quotes/quoteapp/templates/quoteapp/add_quote.html
@@ -30,8 +30,8 @@
     </div>
 
     <div class="grid">
-        <button type="submit">Submit</button>
-        <button type="reset" class="secondary">Reset</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="reset" class="btn btn-primary">Reset</button>
     </div>
 </form>
 {% endblock %}
