--- a/quotes/users/templates/users/profile.html
+++ b/quotes/users/templates/users/profile.html
@@ -27,8 +27,8 @@
         </div>
     </div>
     <div class="grid ">
-        <button type="submit">Save Changes</button>
-        <button type="reset" class="secondary">Reset</button>
+        <button type="submit" class="btn btn-success">Save Changes</button>
+        <button type="reset" class="btn btn-primary">Reset</button>
     </div>
 
 </form>
